Finished, It's not the pretiest layout, maybe I will upgrade it in the future

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
         </div>
         <div class="choices">
             <div id="your-choice">
-                <div>Your choice</div>
+                <h4>Your choice</h4>
                 <img id="humans" src="./images/you.jpg" alt="Humans choice">
             </div>
             <h3 id="round-winner"></h3>
             <div id="computers-choice">
-                <div>Computers choice</div>
+                <h4>Computer's choice</h4>
                 <img id="computers" src="./images/computer.jpg" alt="Computer's choice">
             </div>
         </div>
-        <h3>Who wins 5 times is the ultimate winner</h3>
+        <h3>Get 5 points to win the game</h3>
     </div>
-    <h3>Score</h3>
+    <h2>Score</h2>
     <div class="score">
         <div id="humans-victories">0</div>
         <div id="computers-victories">0</div>
